# quadrotor2d-simulator

./: CMakeLists.txt  README.md
Box2D/Box2D/: CMakeLists.txt
cocos2d-x/cocos/base/: ccConfig.h
src/: Quadrocopter2DContActionCtrl.cpp  QuadrocopterSimulator.hpp  main.h
src/brain-api/: Quadrocopter2DBrain.cpp  Quadrocopter2DBrain.hpp  RLServerClient.cpp  RLServerClient.hpp
uWebSockets/: CMakeLists.txt
